# Apuntes

./: .gitignore  README.md
Primero/C2/Arquitectura de Ordenadores/Apuntes/: Apuntes_Arquitectura_de_Ordenadores.docx  ~$untes_Arquitectura_de_Ordenadores.docx
Primero/C2/Arquitectura de Ordenadores/ExamenFinal/: AVG.szx  AVG.tzx  DEPLZ.szx  DEPLZ.tzx  EVENODD.szx  EVENODD.tzx  ejercicio Zeus 1 par impar_skeleton_AC.ASM  ejercicio Zeus 2 desplazamiento_skeleton_AC.ASM  ejercicio Zeus 3 notas medias_AC_skeleton.ASM
Primero/C2/Arquitectura de Ordenadores/Tema6/: NewFile.szx  NewFile.tzx  pruebaLogicas.ASM  sumar16bits.ASM  w.ASM
Primero/ProyectosI/: ~$aderno de Laboratorio - Victor Manuel Peiro Martinez.docx  ~WRL3476.tmp
Primero/ProyectosI/Entrega 1-VMPM/Entrega 1/: Estacion.ino  Memoria Victor Manuel Peiro Martinez.docx
Primero/ProyectosI/Entrega 2 - VMPM y DJVS/: ProyectoFinal.ino
Primero/ProyectosI/proyecto_entrega/: proyecto_entrega.ino
Tercero/C1/Ampliacion de Bases de Datos/: Apuntes_Ampliacion_BBDD.docx  Chroma_demo_notebook.ipynb
Tercero/C1/Ampliacion de Bases de Datos/Ejercicios/: Ejercicios_1.docx  Ejercicios_2.docx  Ejercicios_3_VMPM.docx  Ejercicios_4_VMPM.docx  ~$ercicios_3_VMPM.docx
Tercero/C1/Ecuaciones en Derivadas Parciales/: REPO.md
Tercero/C1/Electromagnetismo y Optica/: Trabajo_Bibliografico_VMPM.docx
Tercero/C1/Fundamentos de la Composicion Visual/: Apuntes_FCV.docx
Tercero/C1/Programacion de Sistemas Distribuidos/: Apuntes_SSDD.docx  kubernetes-bootcamp.yaml
Tercero/C1/Programacion de Sistemas Distribuidos/Chat_RPC_VMPM/: CMakeLists.txt  chat.cpp  chat.h  clientManager.cpp  clientManager.h  main.cpp  user.cpp  user.h  userDistribuido.cpp
Tercero/C1/Programacion de Sistemas Distribuidos/Practica1/Codigo_Practica/Practica_No_Broker/: CMakeLists.txt  fileManagerDistribuido.cpp  filemanager.cpp  filemanager.h  main_fm.cpp  server.cpp  server.h  utils.h
Tercero/C1/Programacion de Sistemas Distribuidos/Practica1/broker/: CMakeLists.txt  broker.cpp  broker.h  fileManagerDistribuido.cpp  filemanager.cpp  filemanager.h  main_fm.cpp  server.cpp
Tercero/C2/Fisica e Inteligencia Artificial Para Videojuegos/: Apuntes_Videojuegos.docx
Tercero/C2/Programacion Web 2 - Servidor/: Apuntes_Web_Servidor.docx
(+403 files in other folders)
